src/less/core-theme/players.less
/* ... */
// #endregion

// #region Player Error Dialog (Codec)

div[data-syiro-minor-component="player-error"]{
    float: left;
    height: 40px; // Set to 40px, which is exactly two lines of text at 20px line-height
    color: contrast(@syiroPlayerControlColor); // Set the color to the contrasting color of the syiroPlayerControlColor
    text-align: center;
    line-height: 20px;
    background-color: @syiroPlayerControlColor;
    margin: 0;
    padding: 0;
    position: absolute;
    z-index: 4; // Force above all content in the Audio Player or Video Player
    visibility: hidden; // Default to not being visible
    left: 0; // Force to left
}

// #endregion

// #region Player Menu Dialog

div[data-syiro-minor-component="player-menu"]{
    float: left;
    color: contrast(@syiroPlayerControlColor); // Set the color to the contrasting color of the background color
    background-color: fade(@syiroPlayerControlColor, 80%); // Set the background color to the syiroBackgroundColor, faded (transparency) to 80%
    margin: 0;
    padding: 0;
    position: absolute;
    z-index: 6; // Force above the video and video poster
    visibility: hidden; // Default to not being visible

    & > label { // Menu Dialog Label
        float: left;
        height: 50px;
        width: 100%;
        font-size: 18px;
        text-indent: 10px;
        line-height: 50px;
    }

    & > div[data-syiro-component="list"]{ // Menu Dialog List
        float: left;
        height: auto;
        width: 90%;

        & > div[data-syiro-component="list-item"] {
            color: inherit; // Inherit from parent Player Menu
            cursor: pointer; // Make it obvious that the items are interactable
            margin-bottom: 5px; // Ensure there is enough space between List Items
        }
    }
}

// #region Audio Player

div[data-syiro-component="audio-player"]{
    float: left;
    height: auto;
    background-color: @syiroPlayerControlColor; // Set a default background color in the event art is not added.

    & > audio {
        display: hidden; // Hide the audio player
    }

    // #region Mini Player

    &[data-syiro-audio-player="mini"]{
        min-height: 50px;
        max-height: 60px;

        // #region Player Menu

        & > div[data-syiro-minor-component="player-menu"]{
            display: none; // Force Hide the Player Menu
        }

        // #endregion

        // #region Player Controls

        & > div[data-syiro-component="player-control"]{
            margin-top: 0; // No top margin
            background-color: transparent; // Set background-color to transparent
        }

        // #endregion
    }

    // #endregion

    // #region Full-sized Player

    &:not([data-syiro-audio-player="mini"]){ // Not Mini
        height: 150px;
        background-position-y: 33%; // Offset by 1/3 (most album art main content takes up 2/3 to 1/2 of entire album art)
        background-size: 100% auto; // Set background-size to 100% width, automatic height

        // #region Player Menu

        & > div[data-syiro-minor-component="player-menu"]{ // Menu Dialog within Audio Player
            & > div[data-syiro-component="list"] > div[data-syiro-component="list-item"] { // Inner List Items
                width: 40px; // Set width to 40px
                margin-left: 10px; // Ensure the List Item has enough space between the icons and is aligned with the Menu label

                & > img { // If there is an image within the List Item
                    height: 32px; // Reduce the height of the image
                    width: 32px; // Reduce the width of the image
                    margin: 4px 0 0 0; // Ensure the img looks good in the Audio Player's Menu Dialog "Grid View"
                }

                & > label { // Labels within List Items
                    display: none; // Hide the list item
                }
            }
        }

        // #endregion

        // #region Player Controls

        & > div[data-syiro-component="player-control"]{
            background-color: fade(@syiroPlayerControlColor, 75%); // Set background-color to transparent

            &[data-syiro-component-streamstyling]{ // If we are applying "Stream Styling" to the Player Control
                margin-top: 100px; // 100px top margin (since 150px - 50px is 100)
            }

            &:not([data-syiro-component-streamstyling]){ // If we are NOT applying "Stream Styling" to the Player Control
                margin-top: 90px; // 90px top margin (since 150px - 60px is 90)
            }
        }

        // #endregion
    }

    // #endregion

    // #region General Audio Player - Player Control - Styling

    & > div[data-syiro-component="player-control"]{

        // #region Range "Track"

        & > input {
            &::-moz-range-track { // Firefox
                .trackProperties(transparent);
            }

            &::-ms-track{ // Internet Explorer
                .trackProperties(transparent); // Import the trackProperties
            }

            .trackProperties(transparent); // Place in input[type="range"] for Chrome
        }

        // #endregion

        & > div[data-syiro-component="button"]:after{ // Inner Button Content
            color: contrast(@syiroPlayerControlColor);
        }

		& > section { // Audio Information
			float: left;
			height: 40px;
			max-width: 150px;
			text-align: center;
			margin-top: 5px;

			& > b,label {
				float: left;
				color: contrast(@syiroPlayerControlColor); // Make sure the text contrasts the player control color
				line-height: 20px; // Half of section
				width: 100%; // Fill up entire "row"
			}

            & > b, label {
                font-size: 14px;
                font-weight: normal; // No font-weight
            }
        }
    }

    // #endregion
}
/* ... */

